--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <nav> 
-<a href="https://www.w3schools.com/">Google</a>
+<a href="https://www.w3schools.com/">w3schools</a>
 <% @users.each do |u| %>
  <%= u.name %>
  <%= u.email %>
